[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10" 
chrono ="0.4"
rpassword="7.0"
qrcode = "0.13"      # Generates QR matrix
image  = "0.25"      # Converts matrix to PNG
termimad = "0.23"    # Renders QR in terminal (optional)
